Fixed broken links on tos site and unified all the pages. Fixed header from blocking the sight of content when jumping to element ids

--- a/style.css
+++ b/style.css
@@ -280,3 +280,7 @@ ul {
 .close:hover {
   color: #ffdd57;
 }
+
+html {
+  scroll-padding-top: 190px; /* Prevents header from covering content when jumping to sections */
+}
